[package]
name = "miniproxy"
version = "0.1.0"
authors = [
    "importcjj <importcjj@gmail.com>",
    "Alvin Null <supdrewin@outlook.com>",
]
edition = "2021"

[[bin]]
name = "minilocal"
path = "src/bin/local.rs"

[[bin]]
name = "miniserver"
path = "src/bin/server.rs"

[dependencies]
async-std = { version = "1.13", features = ["unstable"] }
base64 = "0.22"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
httparse = "1.9"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
